@@ -124,6 +124,7 @@ Global {
     roundcorners = true
     roundcornersradius = 7
     layer = none
+    MaxIconSize = 32
 }
 
 
