@@ -219,12 +219,10 @@ chart_constructor(plugin_instance *p)
     c->ticks = NULL;
     c->gc_cpu = NULL;
     c->da = p->pwid;
-    h = GTK_WIDGET(p->panel->box)->allocation.height;
-    w = GTK_WIDGET(p->panel->box)->allocation.width;
-    if  (p->panel->orientation == ORIENT_HORIZ)
-        gtk_widget_set_size_request(c->da, h*2, h);
-    else
-        gtk_widget_set_size_request(c->da, w, (gint)((gfloat) w / 2));
+    w = MIN(p->panel->ah, p->panel->aw);
+    w = MIN(w, 50);
+    h = 25;
+    gtk_widget_set_size_request(c->da, w, h);
 
     //gtk_widget_set_size_request(c->da, 40, 20);
     //gtk_container_set_border_width (GTK_CONTAINER (p->pwid), 1);
